IssueZilla 15588 - Remove Script at end of names in Empty Script menu as the Java Script entry was confusing

--- a/scripting/java/org/openoffice/netbeans/modules/office/resources/Bundle.properties
+++ b/scripting/java/org/openoffice/netbeans/modules/office/resources/Bundle.properties
@@ -17,7 +17,7 @@ HINT_OfficeDirectory=Path to directory where Office is installed
 
 Templates/OfficeScripting/Parcel=Parcel Recipe
 Templates/OfficeScripting/EmptyScript=Empty Script
-Templates/OfficeScripting/EmptyScript/Empty.java=Java Script
-Templates/OfficeScripting/EmptyScript/Empty.bsh=BeanShell Script
+Templates/OfficeScripting/EmptyScript/Empty.java=Java
+Templates/OfficeScripting/EmptyScript/Empty.bsh=BeanShell
 
 Menu/Help/office-scripting.url=&Office Scripting Framework Site
