--- a/scripting/workben/build.xml
+++ b/scripting/workben/build.xml
@@ -3,9 +3,9 @@
 #
 #   $RCSfile: build.xml,v $
 #
-#   $Revision: 1.27 $
+#   $Revision: 1.28 $
 #
-#   last change: $Author: dfoster $ $Date: 2003-06-18 13:49:11 $
+#   last change: $Author: toconnor $ $Date: 2003-06-18 14:05:19 $
 #
 #   The Contents of this file are made available subject to the terms of
 #   either of the following licenses
@@ -223,6 +223,7 @@
     <mkdir dir="${out}/class/examples/javascript"/>
     <copy todir="${out}/class/examples/javascript">
         <fileset dir="${prj}/examples/javascript" includes="**"/>
+    </copy>
   </target>
 
   <!-- ===================== Build UNO package ========================= -->
