--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -153,6 +153,7 @@ export ENABLE_OPTIMIZED=@ENABLE_OPTIMIZED@
 export ENABLE_PCH=@ENABLE_PCH@
 export ENABLE_PDFIMPORT=@ENABLE_PDFIMPORT@
 export ENABLE_PDFIUM=@ENABLE_PDFIUM@
+export ENABLE_QT5=@ENABLE_QT5@
 export ENABLE_RANDR=@ENABLE_RANDR@
 export ENABLE_RELEASE_BUILD=@ENABLE_RELEASE_BUILD@
 export ENABLE_REPORTBUILDER=@ENABLE_REPORTBUILDER@
@@ -293,9 +294,6 @@ export KDE4_GLIB_CFLAGS=$(gb_SPACE)@KDE4_GLIB_CFLAGS@
 export KDE4_GLIB_LIBS=$(gb_SPACE)@KDE4_GLIB_LIBS@
 export KDE4_HAVE_GLIB=@KDE4_HAVE_GLIB@
 export KF5_CFLAGS=$(gb_SPACE)@KF5_CFLAGS@
-export KF5_GLIB_CFLAGS=$(gb_SPACE)@KF5_GLIB_CFLAGS@
-export KF5_GLIB_LIBS=$(gb_SPACE)@KF5_GLIB_LIBS@
-export KF5_HAVE_GLIB=@KF5_HAVE_GLIB@
 export KF5_LIBS=$(gb_SPACE)@KF5_LIBS@
 export KRB5_LIBS=@KRB5_LIBS@
 export LCMS2_CFLAGS=$(gb_SPACE)@LCMS2_CFLAGS@
@@ -456,6 +454,11 @@ export PYTHON_LIBS=$(gb_SPACE)@PYTHON_LIBS@
 export PYTHON_VERSION=@PYTHON_VERSION@
 export PYTHON_VERSION_MAJOR=@PYTHON_VERSION_MAJOR@
 export PYTHON_VERSION_MINOR=@PYTHON_VERSION_MINOR@
+export QT5_CFLAGS=$(gb_SPACE)@QT5_CFLAGS@
+export QT5_LIBS=$(gb_SPACE)@QT5_LIBS@
+export QT5_GLIB_CFLAGS=$(gb_SPACE)@QT5_GLIB_CFLAGS@
+export QT5_GLIB_LIBS=$(gb_SPACE)@QT5_GLIB_LIBS@
+export QT5_HAVE_GLIB=@QT5_HAVE_GLIB@
 export QXP_CFLAGS=$(gb_SPACE)@QXP_CFLAGS@
 export QXP_LIBS=$(gb_SPACE)@QXP_LIBS@
 export RANLIB=@RANLIB@
